--- a/index.html
+++ b/index.html
@@ -6,13 +6,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .minima {
+            color: red;
+            font-size: 30px;
+        }
+
+        .maxime {
+            color: blue;
+            font-size: 50px;
+        }
+
+        .article-title {
+            font-size: 30px;
+            color: brown;
+        }
+
+        p {
+            width: 300px;
+            /* margin-bottom: 50px; */
+        }
+
+        span {
+            width: 300px;
+            margin-top: 50px;
+            margin-bottom: 50px;
+            margin-right: 20px;
+            line-height: 50px;
+        }
+
+        div {
+            background-color: darkseagreen;
+            height: 300px;
+            width: 400px;
+        }
+    </style>
 </head>
 
 <body>
+    <!-- <h3 class="article-title">Paragraph 1</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, doloremque! Nobis eaque illum repudiandae impedit.
         Ratione deserunt error unde rerum ea iure, voluptates, placeat minima, earum id excepturi enim reiciendis?</p>
 
+    
+
+    <h3 class="article-title">Paragraph 2</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum odit ut eveniet placeat dolorem! Consequatur beatae
+        magnam aut veniam facere ab reiciendis. Itaque, vitae. A
+        <span class="minima">minima aut</span> rerum architecto
+        <span class="maxime">maxime</span> ?
+    </p>
+
+    <h3 class="article-title">123</h3> -->
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, voluptatum recusandae? Voluptatum, maxime.
+        In, commodi aut quidem est, quam nulla consequatur dignissimos quas, fugiat mollitia maxime delectus magnam
+        corrupti soluta!</p>
+    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias natus totam necessitatibus nulla accusamus
+        exercitationem omnis, ullam consequuntur, eligendi quisquam ea corrupti perferendis at
+        <a href="https://google.com">a saepe
+            facere</a>! Unde,
+        fugiat illum.</span>
+    <span>Eason</span>
+    <span>Hello</span>
     <img src="./imgs/pancakes.jpg" alt="">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, voluptatum recusandae? Voluptatum, maxime.
+        In, commodi aut quidem est, quam nulla consequatur dignissimos quas, fugiat mollitia maxime delectus magnam
+        corrupti soluta!</p>
+
+
+    <div>
+        <p>123</p>
+    </div>
 
 
 </body>
