--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <a href="https://google.com">a saepe
             facere</a>! Unde,
         fugiat illum.</span>
-    <span>Eason</span>
-    <span>Hello</span>
+    <span style="color: red;">Eason</span>
+    <span style="color:blue">Hello</span>
     <img src="./imgs/pancakes.jpg" alt="">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, voluptatum recusandae? Voluptatum, maxime.
         In, commodi aut quidem est, quam nulla consequatur dignissimos quas, fugiat mollitia maxime delectus magnam
