--- a/11.card.html
+++ b/11.card.html
@@ -12,11 +12,16 @@
             box-sizing: border-box;
         }
 
+        body {
+            margin: 0;
+        }
+
         .wrap {
             /* border: 1px solid red; */
             font-size: 0;
         }
 
+        /* 控制卡片寬度 */
         .col {
             width: 33.33%;
             /* border: 1px solid lightseagreen; */
@@ -29,6 +34,7 @@
             padding: 10px 5px 30px;
         }
 
+        /* 控制卡片內圖片寬度，高度自動按等比例 */
         .img-wrap img {
             width: 100%;
             height: auto;
@@ -47,6 +53,8 @@
         span {
             color: lightpink;
         }
+
+        /* 卡片結束 */
     </style>
 </head>
 
