--- a/11.card.html
+++ b/11.card.html
@@ -37,7 +37,7 @@
         /* 控制卡片內圖片寬度，高度自動按等比例 */
         .img-wrap img {
             width: 100%;
-            height: auto;
+            height: 100%;
         }
 
         h3 {
@@ -55,10 +55,26 @@
         }
 
         /* 卡片結束 */
+
+        /* .box {
+            width: 300px;
+            height: 100px;
+            overflow: hidden;
+        }
+
+        .box img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        } */
     </style>
 </head>
 
 <body>
+    <!-- <div class="box">
+        <img src="./imgs/pancakes.jpg" alt="">
+    </div> -->
+
     <div class="wrap">
         <div class="col">
             <div class="card">
